--- a/app/platforms/browser/www/index.html
+++ b/app/platforms/browser/www/index.html
@@ -32,7 +32,8 @@
             <h1>Apache Cordova</h1>
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
+                <p class="event received">Let's Start</p>
+                <a href="workout.html">New Workout</a>
             </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
