--- a/app/www/workout.html
+++ b/app/www/workout.html
@@ -28,15 +28,13 @@
         <title>Hello World</title>
     </head>
     <body>
-        <div class="app">
-            <h1>Apache Cordova</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Let's Start</p>
-                <a href="workout.html">New Workout</a>
-            </div>
+        <div class="workout">
+            <h1>New Workout</h1>
+<ul>
+<li>Workout A</li>
+<li>Workout B</li>
+</ul>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
     </body>
 </html>
