--- a/app/highvol/www/index.html
+++ b/app/highvol/www/index.html
@@ -15,6 +15,7 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/lodash/lodash.js"></script>
+    <script src="lib/node-uuid/uuid.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
@@ -22,6 +23,10 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/configuration/controllers.js"></script>
+    <script src="js/configuration/services.js"></script>
+
+
   </head>
 
   <body ng-app="starter">
