initial work on the workout module

--- a/app/highvol/www/index.html
+++ b/app/highvol/www/index.html
@@ -25,6 +25,8 @@
     <script src="js/controllers.js"></script>
     <script src="js/configuration/controllers.js"></script>
     <script src="js/configuration/services.js"></script>
+    <script src="js/workout/controllers.js"></script>
+    <script src="js/workout/services.js"></script>
 
 
   </head>
