initial integration with new modules

--- a/app/highvol/www/index.html
+++ b/app/highvol/www/index.html
@@ -24,9 +24,18 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/configuration/controllers.js"></script>
+
     <script src="js/configuration/services.js"></script>
     <script src="js/workout/controllers.js"></script>
     <script src="js/workout/services.js"></script>
+    <script src="js/configuration/controllers.js"></script>
+    <script src="js/services/config-exercise-selection.js"></script>
+    <script src="js/services/deprecated/exercise-configuration.js"></script>
+    <script src="js/services/exercise.js"></script>
+    <script src="js/services/workout-template.js"></script>
+
+
+
 
 
   </head>
