--- a/app/highvol/www/index.html
+++ b/app/highvol/www/index.html
@@ -25,15 +25,13 @@
     <script src="js/controllers.js"></script>
     <script src="js/configuration/controllers.js"></script>
 
-    <script src="js/configuration/services.js"></script>
+    <script src="js/configuration/controllers.js"></script>
+    <script src="js/configuration/days/config-exercise-selection.js"></script>
+    <script src="js/configuration/exercises/exercises.controller.js"></script>
+    <script src="js/configuration/exercises/exercises.service.js"></script>
+    <script src="js/configuration/workouts/workout-template.js"></script>
     <script src="js/workout/controllers.js"></script>
     <script src="js/workout/services.js"></script>
-    <script src="js/configuration/controllers.js"></script>
-    <script src="js/services/config-exercise-selection.js"></script>
-    <script src="js/services/deprecated/exercise-configuration.js"></script>
-    <script src="js/services/exercise.js"></script>
-    <script src="js/services/workout-template.js"></script>
-
 
 
 
