--- a/app/highvol/www/index.html
+++ b/app/highvol/www/index.html
@@ -21,12 +21,14 @@
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
+    <script src="js/globals.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/configuration/controllers.js"></script>
 
     <script src="js/configuration/controllers.js"></script>
     <script src="js/configuration/days/config-exercise-selection.js"></script>
+    <script src="js/configuration/exercises/_module.js"></script>
     <script src="js/configuration/exercises/exercises.controller.js"></script>
     <script src="js/configuration/exercises/exercises.service.js"></script>
     <script src="js/configuration/workouts/workout-template.js"></script>
