Setup Workout Configuration

--- a/app/highvol/www/index.html
+++ b/app/highvol/www/index.html
@@ -31,6 +31,9 @@
     <script src="js/configuration/exercises/_module.js"></script>
     <script src="js/configuration/exercises/exercises.controller.js"></script>
     <script src="js/configuration/exercises/exercises.service.js"></script>
+    <script src="js/configuration/setup/workout/_module.js"></script>
+    <script src="js/configuration/setup/workout/setup.workout.controller.js"></script>
+
     <script src="js/configuration/workouts/workout-template.js"></script>
     <script src="js/workout/controllers.js"></script>
     <script src="js/workout/services.js"></script>
